--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
   "author": "yk",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "node --max_old_space_size=4096 ./node_modules/gulp/bin/gulp.js build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register starter/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
     "@nestjs/common": "^5.3.7",
@@ -26,7 +22,6 @@
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
     "graphql-type-json": "^0.2.1",
-    "i18n": "^0.8.3",
     "moment": "^2.24.0",
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.13",
@@ -34,24 +29,25 @@
     "rxjs": "^6.2.2",
     "ts-node": "^8.0.2",
     "typeorm": "^0.2.13",
-    "typescript": "^3.0.1",
+    "typescript": "3.2.2",
     "underscore": "^1.9.1"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
   "devDependencies": {
-    "tsconfig-paths": "^3.8.0"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/graphql": "^14.0.4",
+    "@types/graphql-type-json": "^0.1.3",
+    "@types/i18n": "^0.8.3",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/node": "^10.12.18",
+    "gulp": "^3.9.1",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-tslint": "^8.1.3",
+    "gulp-typescript": "^5.0.0",
+    "lerna": "^3.8.1",
+    "nodemon": "^1.18.9",
+    "ts-node": "^7.0.0",
+    "tsconfig-paths": "^3.7.0",
+    "tslint": "^5.12.0"
   }
 }
