--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,23 +9,21 @@
         "noImplicitAny": false,
         "noLib": false,
         "lib": [
-            "es2018",
-            "esnext.asynciterable"
+            "es6"
         ],
         "noUnusedLocals": false,
         "removeComments": true,
         "strict": false,
         "strictPropertyInitialization": false,
-        "target": "es2018",
+        "target": "es6",
         "outDir": "package"
     },
     "include": [
-        "src/*.ts",
-        "src/**/*.ts",
-        "src/**/**/*.ts"
+        "./src/*.ts",
+        "./src/**/*.ts"
     ],
     "exclude": [
         "node_modules",
-        "test"
+        "**/*.spec.ts"
     ]
 }
