--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/graphql": "^5.3.1",
     "@nestjs/typeorm": "^5.2.1",
     "apollo-server-express": "^2.4.2",
+    "@notadd/addon-sms": "^2.4.2",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
     "graphql-type-json": "^0.2.1",
